src/objects/Get2OneCRM__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Org wide custom settings</description>
    <fields>
        <fullName>Admin_Activity_Case_RT__c</fullName>
        <description>Case Record Type ID for Admin Activity in this environment</description>
        <label>Admin Activity Case RT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administrator_Profile_Name__c</fullName>
        <defaultValue>&quot;System Administrator&quot;</defaultValue>
        <description>Hold the name of the System Administrator profile. It is used in Apex to prevent actions from none System Administrator.</description>
        <label>Administrator Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Admin_Activity_Case_RT__c</fullName>
        <label>Approval_Admin_Activity_Case_RT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Standard_User_PDK_BE_Profile_Name__c</fullName>
        <defaultValue>&quot;CS Standard User - PDK BE&quot;</defaultValue>
        <description>Name of theCustomer Service employees profile. It is used in workflow, triggers, etc. and must be updated if another profile should be used</description>
        <label>CS Standard User PDK BE Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Contact_Task_Name__c</fullName>
        <defaultValue>&quot;Campaign Task - Call Contact&quot;</defaultValue>
        <description>This custom setting will control if the Campaign Task to call the contact will have the fields Related To populated by the Campaign and the Comments with the campaign description.</description>
        <label>Call Contact Task Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Opp_Lookup_Field_ID__c</fullName>
        <description>Used to store the id of the Opportunity lookup field on the case object. This custom setting is then referenced in a custom button to build a URL</description>
        <label>Case Opp Lookup Field ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_RecordTypes__c</fullName>
        <defaultValue>&quot;Complaint,Customer_Assignment,Customer_Feedback&quot;</defaultValue>
        <description>Holds record types developer name of Case for which Case Product record must be created when case record is created.</description>
        <label>Case RecordTypes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName_StructuredCommunication__c</fullName>
        <defaultValue>&quot;Functional Inbox&quot;</defaultValue>
        <description>Holds contact name for Structured Communication functionality.</description>
        <label>ContactName StructuredCommunication</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Type_from_LeadConvert__c</fullName>
        <defaultValue>&quot;Lead Contact Person&quot;</defaultValue>
        <description>Contains the value to set for &quot;Contact Person Type&quot; to be set for contacts created by custom Lead convert process.</description>
        <label>Contact Person Type from LeadConvert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Type_from_PAR__c</fullName>
        <defaultValue>&quot;Official&quot;</defaultValue>
        <description>Contains the value to set for &quot;Contact Person Type&quot; for contacts returned from PAR.</description>
        <label>Contact Person Type from PAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertPotential_CloseDate__c</fullName>
        <defaultValue>6</defaultValue>
        <description>The number of months into the future the CloseDate is set.</description>
        <label>ConvertPotential_CloseDate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConvertPotential_Name__c</fullName>
        <defaultValue>&quot;Converted from Potential&quot;</defaultValue>
        <description>Holds the name of the new opportunity.</description>
        <label>ConvertPotential_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertPotential_StageName__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>Holds the stage name of the opportunity.</description>
        <label>ConvertPotential_StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConvertPotential_Status__c</fullName>
        <defaultValue>&quot;Converted to Opportunity&quot;</defaultValue>
        <description>The status of the converted Potential.</description>
        <label>ConvertPotential_Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Responsible_Role__c</fullName>
        <defaultValue>&quot;Customer Responsible&quot;</defaultValue>
        <description>Text used to check for a Customer Responsible role when processing account team members. Roles that contain this text will be assumed to represent a customer responsible.</description>
        <inlineHelpText>Text used to check for a Customer Responsible role when processing account team members. Roles that contain this text will be assumed to represent a customer responsible.</inlineHelpText>
        <label>Customer Responsible Role</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Profile_Names__c</fullName>
        <defaultValue>&quot;CS Standard User - LO,CS Standard User - ME SE,CS Standard User - PDK BE&quot;</defaultValue>
        <description>Holds Customer Services profile names to be used in validation rules</description>
        <label>Customer Service Profile Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Danish_Sales_Areas__c</fullName>
        <defaultValue>&quot;1000,4000&quot;</defaultValue>
        <description>Holds a list of Danish Sales Areas separated by comma.</description>
        <label>Danish Sales Areas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventActivityCompletedDateTypes__c</fullName>
        <description>Holds Activity_Type_std__c field values(comma separated) for setting ActivityCompletedDate field on Event.</description>
        <label>EventActivityCompletedDateTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_CRM_Webservices_Profile_Name__c</fullName>
        <defaultValue>&quot;Integration Exposed Webservices User&quot;</defaultValue>
        <description>Name of the integration user profile. It is used in workflow, triggers, etc. and must be updated if another profile should be used</description>
        <label>Integration CRM Webservices Profile Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Profile_Name__c</fullName>
        <defaultValue>&quot;Integration User&quot;</defaultValue>
        <description>Name of the integration user profile. It is used in workflows, triggers, etc.</description>
        <label>Integration Profile Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Read_Only_Profile_Name__c</fullName>
        <defaultValue>&quot;Integration Read Only User&quot;</defaultValue>
        <description>Name of the integration read only profile. It is used in workflows, triggers, etc.</description>
        <label>Integration Read Only Profile Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_User_RealtimeUpsert_User__c</fullName>
        <description>Integration User RealtimeUpsert User</description>
        <label>Integration User RealtimeUpsert User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Allocated_to_Sales__c</fullName>
        <defaultValue>&quot;Allocated&quot;</defaultValue>
        <description>Holds the value of Status on leads allocated to sales.</description>
        <label>Lead Allocated to Sales</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Receiver_Account_Team_Role__c</fullName>
        <defaultValue>&quot;Customer Responsible&quot;</defaultValue>
        <description>Holds the names of the Account Team Role used to look up users for the automatic setting of Lead Receiver.</description>
        <label>Lead Receiver Account Team Role</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sales_Area_SAP_codes__c</fullName>
        <defaultValue>&quot;1000,4000,FO91,FO92,0540,LO NO&quot;</defaultValue>
        <description>Holds the SAP codes representing the Sales Area used for automatic setting of Lead Receiver. Separated by comma.</description>
        <label>Lead Sales Area SAP codes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <defaultValue>&quot;Qualified by lead information,Qualified by customer contact&quot;</defaultValue>
        <description>Holds the Lead status picklist field values that should be used when automatically setting lead receiver. Separated by &quot;,&quot;.</description>
        <label>Lead Status for Automatic Lead Receiver</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Sync_Profile_Name__c</fullName>
        <defaultValue>&quot;Marketo Sync&quot;</defaultValue>
        <description>To be used in workflow rules and validation rules where Marketo Sync profile needs to be excluded</description>
        <label>Marketo Sync Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTT_Search_RecordTypes__c</fullName>
        <defaultValue>&quot;Item_Search&quot;</defaultValue>
        <description>Holds Developer Name for all the Record Types Supported for NTT Search.</description>
        <label>NTT Search RecordTypes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTT_locale_values__c</fullName>
        <defaultValue>&quot;sv_SE,da_DK,fi_FI,no_NO&quot;</defaultValue>
        <description>The locales that NTT supports, separated by &quot;,&quot;.</description>
        <label>NTT locale values</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Contact_Main_Flow_Record_Types__c</fullName>
        <label>New Contact Main Flow Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_MOD_Flow_Record_Types__c</fullName>
        <defaultValue>&quot;PersonAccount&quot;</defaultValue>
        <description>The record types that should initiate the main custom create flow for new accounts that should be MOD validated</description>
        <inlineHelpText>A comma separated (CSV) list of record type _developer_ names indicating which accounts should follow this flow when being generated in the UI</inlineHelpText>
        <label>New Customer MOD Flow Record Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_MOD_Flow_Reg_Country__c</fullName>
        <defaultValue>&quot;DK&quot;</defaultValue>
        <description>Holds the country code of the default registration country</description>
        <label>New Customer MOD Flow Reg Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_MOD_Flow_WS_Type__c</fullName>
        <defaultValue>&quot;TY99&quot;</defaultValue>
        <description>Holds default work site type code</description>
        <label>New Customer MOD Flow WS Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer_Main_Flow_Record_Types__c</fullName>
        <defaultValue>&quot;Work_Site,Legal_Entity,External_Partner,Competitor&quot;</defaultValue>
        <description>The record types that should initiate the main custom create flow for new accounts</description>
        <inlineHelpText>A comma separated (CSV) list of record type _developer_ names indicating which accounts should follow this flow when being generated in the UI</inlineHelpText>
        <label>New Customer Main Flow Record Types</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBM_Stress_Dashboard_Captcha__c</fullName>
        <defaultValue>&quot;THIS WILL CREATE/DELETE RECORDS AND SEND DATA TO EXTERNAL SYSTEMS&quot;</defaultValue>
        <description>This is a text that will need to be entered to the OBM Stress Dashboard to create or remove the records that the dashboard will do.</description>
        <label>OBM Stress Dashboard Captcha</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Closed_Lost__c</fullName>
        <defaultValue>&quot;Closed Lost&quot;</defaultValue>
        <label>Opportunity Stage Closed Lost</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Closed_Won__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <label>Opportunity Stage Closed Won</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Notification_Operation_Delete__c</fullName>
        <defaultValue>&quot;DELETE&quot;</defaultValue>
        <label>Outbound Notification Operation Delete</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_System_Administrator_Profile_Name__c</fullName>
        <defaultValue>&quot;Postnord System Administrator&quot;</defaultValue>
        <description>The name of the Postnord System Administrator profile</description>
        <label>PN System Administrator Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type_Payer__c</fullName>
        <defaultValue>&quot;RG&quot;</defaultValue>
        <description>This is the SAP code for the value Payer on the field Relationship Type on the Relationship object.</description>
        <label>Relationship Type Payer</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Admin_User__c</fullName>
        <defaultValue>&quot;Sales Admin User&quot;</defaultValue>
        <description>The name of Sales Admin User Profile</description>
        <label>Sales Admin User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_User_Profile_Name__c</fullName>
        <defaultValue>&quot;Sales Standard User&quot;</defaultValue>
        <description>Name of the sales user profile.</description>
        <label>Sales User Profile Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swedish_Sales_Areas__c</fullName>
        <defaultValue>&quot;FO91,FO92&quot;</defaultValue>
        <description>Holds a list of Swedish Sales Areas separated by comma.</description>
        <label>Swedish Sales Areas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Administrator_Profile_Name__c</fullName>
        <defaultValue>&quot;System Administrator&quot;</defaultValue>
        <description>The name of the System Administrator Profile</description>
        <label>System Administrator Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskActivityCompletedDateTypes__c</fullName>
        <description>Holds Activity_Type_std__c field values (comma separated) for setting tActivityCompletedDate field on Task.</description>
        <label>TaskActivityCompletedDateTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskActivityDateTypes__c</fullName>
        <description>Holds Activity_Type_std__c field values (comma separated) for setting nextCallListDate field on Task with ActivityDate.</description>
        <label>TaskActivityDateTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskNextCallListDateTypes__c</fullName>
        <description>Holds Activity_Type_std__c field values(comma separated) for setting nextCallListDate field on Task.</description>
        <label>TaskNextCallListDateTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskNotReachedCounterTypes__c</fullName>
        <description>Holds Activity_Type_std__c field values (comma separated)  for setting notReachedCounter field on Task.</description>
        <label>TaskNotReachedCounterTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Account__c</fullName>
        <defaultValue>&quot;Y&quot;</defaultValue>
        <description>Hold the value representing a Verified account (the value in Verified__c).</description>
        <label>Verified Account</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webshop_B2B_Name__c</fullName>
        <defaultValue>&quot;B2B Webshop&quot;</defaultValue>
        <description>This is the account name that all the new B2B Webshop (Netbutikken) accounts will get.</description>
        <label>Webshop B2B Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webshop_B2C_Name__c</fullName>
        <defaultValue>&quot;B2C Webshop&quot;</defaultValue>
        <description>This is the account name that all the new B2C Webshop (Netbutikken) accounts will get.</description>
        <label>Webshop B2C Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webshop_Origin__c</fullName>
        <defaultValue>&quot;Netbutikken&quot;</defaultValue>
        <description>This is the Origin name that will be set on the field Origin for the Webshop Record Types.</description>
        <label>Webshop Origin</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Site_Type_HQ__c</fullName>
        <defaultValue>&quot;TY10&quot;</defaultValue>
        <description>Holds the PAR value for Work Site Type: HQ</description>
        <label>Work Site Type HQ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Get2OneCRM</label>
</CustomObject>